# libtii

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FrameLayout.nb  INSTALL  LICENSES  README.md  Swarm_fast_movie_generator.sh  Swarm_fast_movie_generator_historical.sh  TODO  analysis.c  analysis.h  colortable.h  draw.c  draw.h  filters.c  filters.h  fonts.c  fonts.h  fonts9_to_24.h  gainmap.c  gainmap.h  gainmapdata.h  get_image_stats.c  imagery.nb  import.c  import.h  isp.c  isp.h  libavutil.c  libavutil.h  parallel_process_TIIM.sh  parallel_process_TIIM_stats.sh  png.c  png.h  process_TIIM.sh  process_TIIM_stats.sh  tiim.c  tiim.h  (+9 more)
Docker/: Dockerfile  docker-build.sh  docker-setup-dev-container.sh
Mathematica/: Eofr.nb  FrameLayout.nb  GainMapCsvExportCheck.nb  Image_anomaly_map.nb  TRACIS_TII_simulations_dV=-60.3_vfp=0.0_20230320.mmaz  TRACIS_TII_simulations_dV=-99.0_vfp=0.0_20230320.mmaz  eField_loRes_20130423.mmaz  eField_loRes_20210129.mmaz  imagery.nb
example/: SW_OPER_EFIANOM_0__20211213T003621_20211213T125320_0201.HDR  SW_OPER_EFIATIC_0__20211207T211752_20211208T005254_0201.HDR  Swarm_TII_crop_ellipse_offsets.txt  stats.nb
gainmaps/: PrepGainMaps.nb  gainCorrectionMap_FM2_A_20111004.csv  gainCorrectionMap_FM2_A_20140225.csv  gainCorrectionMap_FM2_A_20140329.csv  gainCorrectionMap_FM2_A_20140829.csv  gainCorrectionMap_FM2_A_20140918.csv  gainCorrectionMap_FM2_A_20150107.csv  gainCorrectionMap_FM2_A_20151028.csv  gainCorrectionMap_FM2_A_20151029.csv  gainCorrectionMap_FM2_A_20161219.csv  gainCorrectionMap_FM2_A_20180723.csv  gainCorrectionMap_FM2_A_20181006.csv  gainCorrectionMap_FM2_A_20190119.csv  gainCorrectionMap_FM2_A_20190804.csv  gainCorrectionMap_FM2_A_20200312.csv  gainCorrectionMap_FM2_A_20200710.csv  gainCorrectionMap_FM2_A_20200917.csv  gainCorrectionMap_FM2_A_20201119.csv  gainCorrectionMap_FM2_A_20210326.csv  gainCorrectionMap_FM2_A_20210721.csv  gainCorrectionMap_FM2_A_20211209.csv  gainCorrectionMap_FM2_B_20111004.csv  gainCorrectionMap_FM2_B_20140225.csv  gainCorrectionMap_FM2_B_20140324.csv  gainCorrectionMap_FM2_B_20140329.csv  gainCorrectionMap_FM2_B_20140918.csv  gainCorrectionMap_FM2_B_20150107.csv  gainCorrectionMap_FM2_B_20151028.csv  gainCorrectionMap_FM2_B_20151029.csv  gainCorrectionMap_FM2_B_20161219.csv  gainCorrectionMap_FM2_B_20180723.csv  gainCorrectionMap_FM2_B_20181006.csv  gainCorrectionMap_FM2_B_20190119.csv  gainCorrectionMap_FM2_B_20190804.csv  gainCorrectionMap_FM2_B_20200312.csv  gainCorrectionMap_FM2_B_20200710.csv  gainCorrectionMap_FM2_B_20200917.csv  gainCorrectionMap_FM2_B_20201119.csv  gainCorrectionMap_FM2_B_20210326.csv  gainCorrectionMap_FM2_B_20210721.csv  (+72 more)
include/: analysis.h  colors.h  detector.h  draw.h  filters.h  fonts.h  gainmap.h  import.h  isp.h  png.h  settings.h  tii.h  tiigraphics.h  timeseries.h  utility.h  video.h  xml.h
lib/: CMakeLists.txt  analysis.c  import.c  timeseries.c
lib/tii/: CMakeLists.txt  analysis.c  detector.c  filters.c  gainmap.c  gainmapdata.h  import.c  isp.c  timeseries.c  utility.c  xml.c
lib/tiigraphics/: CMakeLists.txt  colortable.h  draw.c  fonts.c  fonts9_to_24.h  png.c  video.c
libtii/: analysis.c  filters.c  isp.c  utility.c
libtiigraphics/: CMakeLists.txt  draw.c  fonts.c
tiim/: process_TIIM_stats.sh
tiim_stats/: CMakeLists.txt  tiim_stats.c
tools/: CMakeLists.txt
tools/anomaly_stats/: CMakeLists.txt  anomaly_stats.c  anomaly_stats.h  parallel_process_anomaly_stats.sh  process_anomaly_stats.sh
tools/anomaly_stats_parallel/: CMakeLists.txt  main.c
tools/gainmap_estimation/: CMakeLists.txt  gainmap_estimation.c  gainmap_estimation.h  parse_args.c  parse_args.h  usage.c  usage.h
tools/get_image_stats/: CMakeLists.txt  get_image_stats.c
tools/get_operations/: CMakeLists.txt  get_operations.c
tools/process_anomaly_stats/: CMakeLists.txt  process_anomaly_stats.c
tools/tii_dump/: CMakeLists.txt  parallel_process_tii_dump.sh  process_tii_dump.sh  tii_dump.c  tii_dump.h
tools/tii_look/: CMakeLists.txt  tii_look.c  tii_look.h
tools/tii_moments/: CMakeLists.txt  parallel_process_tii_moments.sh  process_tii_moments.sh  tii_moments.c  tii_moments.h
tools/tiim/: CMakeLists.txt  cmake_debug.sh  parallel_process_TIIM.sh  process_TIIM.sh  tiim.c  tiim.h
tools/tiim_stats/: CMakeLists.txt  parallel_process_TIIM_stats.sh  process_TIIM_stats.sh  tiim_stats.c
