PROJECT(tiigraphics VERSION 1.0.0 DESCRIPTION "Swarm Electric Field Instrument Thermal Ion Imager (TII) graphics library")
INCLUDE(GNUInstallDirs)

SET(LIBS ${LIBS} ${MATH} ${LIBXML2_LIBRARIES})
INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})

ADD_LIBRARY(tiigraphics fonts.c draw.c video.c)
SET_TARGET_PROPERTIES(tiigraphics PROPERTIES 
    VERSION ${PROJECT_VERSION}
    SOVERSION 1
    PUBLIC_HEADER tiigraphics.h
)
TARGET_INCLUDE_DIRECTORIES(tiigraphics PRIVATE . )
TARGET_LINK_LIBRARIES(tiigraphics tii)

install(TARGETS tiigraphics
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
# install(FILES ${CMAKE_BINARY_DIR}/mylib.pc
#     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)